WIP rail data, new data version for tfgm